egi-webinar-01-2024/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egi-webinar-application-service
spec:
  selector:
    app: egi-sample-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
